Fix overflowing footer using bootstrap

--- a/scss/mooveuv/_footer.scss
+++ b/scss/mooveuv/_footer.scss
@@ -1,38 +1,25 @@
 .footer-cv {
     background-color: #CD1F32;
-}
-
-.footer-cv .flex-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 25px;
-}
-
-.footer-cv .flex-item-footer-left {
     h4, h5, a, div {
         color: white;
     }
 }
 
-.footer-cv .flex-container-footer-right {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    a {
-        color:white;
-    }
+.footer-cv .container-fluid {
+    max-width: 100%;
 }
 
-.footer-cv .flex-container-social-media {
-    display: flex;
-}
-
-.footer-cv .flex-item-policy-privacy {
+.footer-cv .privacy-policies {
     text-align: right;
+    margin-bottom: 5px;
+    margin-top: 10px;
 }
 
-.footer-cv .flex-item-social-media {
+.footer-cv .social-media-icons {
     padding-left: 15px;
     font-size: 2.5em;
+}
+
+.footer-cv .row.justify-content-end {
+    margin-right: 0px;
 }
